ShareCar.Client/src/styles/testmap.css
#map {
  position: absolute;
  width: 100%;
  height: 100vh;
}
button.ap-input-icon {
  display: none;
}
/* button {
  background-color: #007bff !important;
} */
.passengerForm {
  display: flex;
  justify-content: center;
  align-items: flex-start;
  flex-wrap: wrap;
  position: relative;
  left: 0;
  top: 70px;
  width: 100%;
  z-index: 999;
}
.algolia-input {
  justify-self: center;
  margin-top: 20px;
}
.paper-background {
  padding: 0.2em;
}
.centerElement {
  flex: 0 0 100%;
  display: flex;
  height: 100px;
  justify-content: center;
}
.next-button {
  position: absolute;
  height: 50px;
  top: 450px;
  left: 15px;
  z-index: 999;
}
input.center-location {
  opacity: 0.8;
}
.driver-button-container {
  display: flex;
  justify-content: center;
}
.driver-name {
  display: flex;
  justify-content: space-evenly;
}
.names-and-phones {
  justify-content: center;
}
.call {
  display: flex;
  justify-content: space-evenly;
}
.from-to-container {
  height: 100px;
}
.centerElement input {
  flex: 0 0 100%;
}
#map div {
  border: none !important;
}
div.map-input-selection {
  display: flex;
  flex-wrap: wrap;
  flex-direction: row;
  justify-content: left;
  margin-top: 3%;
  margin-left: 3%;
  z-index: 999;
}
div.map-input-selection .form-group {
  display: flex;
  flex-wrap: wrap;
  flex: 0 0 100%;
  justify-content: left;

}
span.ap-dropdown-menu {
  z-index: 99999 !important;
}
.date-display {
  display: flex;
  justify-content: center;
}
tbody {
  margin: 0 auto;
  text-align: center;
}
span.algolia-places {
  display: flex !important;
  justify-content: center;
  width: 90%;
}
div.map-input-selection input.location-select {
  z-index: 999;
}
div.displayRoutes {
  position: absolute;
  left: 0;
  top: 10;
  width: 100%;
  z-index: 99;
}
button.continue-button {
  position: absolute;
  bottom: 15vh;
  right: 10px;
  z-index: 999;
  background-color: #007bff;
}
button.select-office-menu {
  background-color: #007bff;
  color: white;
  z-index: 1;
}
button.change-direction {
  background-color: #007bff;
  color: white;
  z-index: 1;
}
button.remove-route-point {
  background-color: #007bff;
  color: white;
  z-index: 1;
}
.driver-route-input{
  justify-content: left !important;

}

